# TESReloaded10

./: .gitignore  License.md  License.txt  README.md  TESReloaded.sln  build.bat
.github/workflows/: deploy.yml  main.yml
Configurator/: Cargo.toml  Configurator.manifest  Configurator.rc  build1.rs  effect.ini  effect.ini.bak  shader.ini  shader.ini.bak  test.ini  test.ini.bak
Configurator/src/: cfile.rs  effect_config.rs  lib.rs  main_config.rs  menu.rs  shader_config.rs  sys_string.rs
Extra/: NewVegasReloaded.dll.config  OblivionReloaded.dll.config
NewVegasReloaded/: Exports.def  Main.cpp  NewVegasReloaded.aps  NewVegasReloaded.dll.manifest  NewVegasReloaded.rc  NewVegasReloaded.vcxproj  NewVegasReloaded.vcxproj.filters  resource.h
OblivionReloaded/: Exports.def  Main.cpp  OblivionReloaded.aps  OblivionReloaded.dll.manifest  OblivionReloaded.rc  OblivionReloaded.vcxproj  OblivionReloaded.vcxproj.filters  resource.h
SkyrimReloaded/: Exports.def  Main.cpp  SkyrimReloaded.aps  SkyrimReloaded.rc  SkyrimReloaded.vcxproj  SkyrimReloaded.vcxproj.filters  resource.h
TESReloaded/Core/: Animation.cpp  Animation.h  BinkManager.cpp  BinkManager.h  CameraManager.cpp  CameraManager.h  CommandManager.cpp  CommandManager.h  D3D9Device.h  D3D9Hook.cpp  DebugManager.cpp  DebugManager.h  Dodge.cpp  Dodge.h  EquipmentManager.cpp  EquipmentManager.h  FlyCam.cpp  FlyCam.h  FormHook.cpp  FormHook.h  FrameRateManager.cpp  FrameRateManager.h  GameEventManager.cpp  GameEventManager.h  GameMenuManager.cpp  GameMenuManager.h  GrassMode.cpp  GrassMode.h  KeyboardManager.cpp  KeyboardManager.h  Managers.cpp  Managers.h  MemoryManagement.cpp  MemoryManagement.h  MountedCombat.cpp  MountedCombat.h  OcclusionManager.cpp  OcclusionManager.h  PluginVersion.cpp  PluginVersion.h  (+22 more)
TESReloaded/Framework/: Game.cpp
(+645 files in other folders)
