[package]
name = "Configurator"
version = "0.1.0"
edition = "2021"
build = "build1.rs"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"]}
serde-deserialize-over = "*"
toml = { version="*", features = ["preserve_order"] }
libc = "*"
memchr = "*"
hex-serde-util = "*"
once_cell = "*"
winapi = { version = "0.3", features = ["std", "d3d9", "d3d9types", "wtypes", "wtypesbase", "winuser"] }
[build-dependencies]
cbindgen = "0.25.0"
